# loongsuite-python

./: AGENTS.md  CHANGELOG-loongsuite.md  README-zh.md  README.md  packages.txt  pyproject.toml  tox-loongsuite.ini  tox.ini
.github/workflows/: loongsuite-release.yml  loongsuite_lint_0.yml  loongsuite_test_0.yml
docs/: loongsuite-release.md
instrumentation-genai/opentelemetry-instrumentation-anthropic/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-claude-agent-sdk/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-google-genai/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-openai-agents-v2/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-openai-v2/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-openai-v2/tests/: test_responses.py
instrumentation-genai/opentelemetry-instrumentation-vertexai/: pyproject.toml
instrumentation-loongsuite/: README.md
instrumentation-loongsuite/loongsuite-instrumentation-agent-reach/: README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-agent-reach/src/opentelemetry/instrumentation/agent_reach/: __init__.py  _utils.py  _wrappers.py  metrics.py  package.py  semconv.py
instrumentation-loongsuite/loongsuite-instrumentation-agent-reach/tests/: __init__.py  conftest.py  test_agent_reach.py
instrumentation-loongsuite/loongsuite-instrumentation-agentscope/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-agentscope/tests/: test_skill_detection.py
instrumentation-loongsuite/loongsuite-instrumentation-agno/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-algotune/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-algotune/tests/: conftest.py  test_instrumentor.py  test_utils.py  test_wrappers.py
instrumentation-loongsuite/loongsuite-instrumentation-bfclv4/: CHANGELOG.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-bfclv4/tests/: conftest.py  test_instrument_lifecycle.py  test_internals.py  test_provider.py  test_state.py  test_utils.py  test_wrappers.py
instrumentation-loongsuite/loongsuite-instrumentation-claude-agent-sdk/: CHANGELOG.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-claude-agent-sdk/tests/: test_span_validation.py
instrumentation-loongsuite/loongsuite-instrumentation-claw-eval/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-claw-eval/tests/: conftest.py  test_instrumentor.py  test_wrappers.py
instrumentation-loongsuite/loongsuite-instrumentation-cognee/: README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-cognee/tests/: conftest.py  test_entry_wrapper.py  test_instrumentor.py  test_llm_compat_wrapper.py  test_span_processor.py  (+2 more)
instrumentation-loongsuite/loongsuite-instrumentation-crewai/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-dashscope/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-deepagents/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-deer-flow/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-deer-flow/src/opentelemetry/instrumentation/deer_flow/: __init__.py  package.py  utils.py
instrumentation-loongsuite/loongsuite-instrumentation-deer-flow/src/opentelemetry/instrumentation/deer_flow/patches/: __init__.py  entry.py  memory.py  sandbox.py  subagent.py  task_tool.py
instrumentation-loongsuite/loongsuite-instrumentation-deer-flow/tests/: test_instrumentor.py  test_patches_regression.py
instrumentation-loongsuite/loongsuite-instrumentation-fara/: pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-google-adk/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-harbor-terminus2/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-harbor-terminus2/src/opentelemetry/instrumentation/harbor_terminus2/: __init__.py  package.py
instrumentation-loongsuite/loongsuite-instrumentation-hermes-agent/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-langchain/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-litellm/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-mem0/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-mempalace/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-minisweagent/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-openhands/: README.rst  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-pydantic-ai/: README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-pydantic-ai/src/opentelemetry/instrumentation/pydantic_ai/: __init__.py  capability.py  package.py  span_processor.py
instrumentation-loongsuite/loongsuite-instrumentation-pydantic-ai/tests/: requirements.latest.txt  test_span_processor.py
instrumentation-loongsuite/loongsuite-instrumentation-qwen-agent/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-qwenpaw/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-slop-code/: README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-terminus2/: pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-vita/: README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-webarena/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-widesearch/: pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-wildtool/: pyproject.toml
loongsuite-distro/tests/: test_configurator.py  test_resource.py
scripts/loongsuite/: select_new_pypi_projects.py
util/opentelemetry-util-genai/: pyproject.toml
(+171 files in other folders)
